--- a/Autoparc/appsettings.json
+++ b/Autoparc/appsettings.json
@@ -21,5 +21,5 @@
   },
 
   "AllowedHosts": "*",
-  "ConnectionStrings": { "AutoparcConnection": " Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AutoparcDB;Integrated Security=True;Connect Timeout=30" }
+  "ConnectionStrings": { "AutoparcConnection": " Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AutoparcDB;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=true" }
 }
